[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Container/Container.gd" type="Script" id=1]
[ext_resource path="res://Assets/Miscellaneous/raleway.medium.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0509804, 0.109804, 0.247059, 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="Container" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -770.0
margin_top = -360.0
margin_right = 770.0
margin_bottom = 360.0
rect_min_size = Vector2( 1540, 720 )
custom_styles/panel = SubResource( 3 )
script = ExtResource( 1 )

[node name="DividerContainer" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
rect_min_size = Vector2( 1520, 700 )

[node name="ContainerContainer" type="VBoxContainer" parent="DividerContainer"]
margin_right = 758.0
margin_bottom = 700.0
size_flags_horizontal = 3

[node name="ContainerTitle" type="Label" parent="DividerContainer/ContainerContainer"]
margin_right = 758.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "-"
valign = 1

[node name="ContainerListScroll" type="ScrollContainer" parent="DividerContainer/ContainerContainer"]
margin_top = 43.0
margin_right = 758.0
margin_bottom = 700.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ContainerList" type="VBoxContainer" parent="DividerContainer/ContainerContainer/ContainerListScroll"]
margin_right = 758.0
margin_bottom = 657.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InventoryContainer" type="VBoxContainer" parent="DividerContainer"]
margin_left = 762.0
margin_right = 1520.0
margin_bottom = 700.0
size_flags_horizontal = 3

[node name="InventoryTitle" type="Label" parent="DividerContainer/InventoryContainer"]
margin_right = 758.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "Inventory"
valign = 1

[node name="InventoryListScroll" type="ScrollContainer" parent="DividerContainer/InventoryContainer"]
margin_top = 43.0
margin_right = 758.0
margin_bottom = 700.0
size_flags_vertical = 3

[node name="InventoryList" type="VBoxContainer" parent="DividerContainer/InventoryContainer/InventoryListScroll"]
margin_right = 758.0
margin_bottom = 657.0
size_flags_horizontal = 3
size_flags_vertical = 3
